--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-phone-input-2": "^2.15.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-top-loading-bar": "^2.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
