--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.8.1",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-icons": "^4.3.1",
